adds update data endpoint
